[package]
name = "sitelen-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for rendering Toki Pona text as Sitelen Sitelen"

[[bin]]
name = "sitelen"
path = "src/main.rs"

[dependencies]
sitelen-core = { path = "../sitelen-core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"

