[package]
name = "sitelen-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for rendering Toki Pona text as Sitelen Sitelen"

[lib]
name = "sitelen_core"
path = "src/lib.rs"

[dependencies]
resvg = "0.42"
usvg = "0.42"
tiny-skia = "0.11"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"

[dev-dependencies]
criterion = "0.5"

