[package]
name = "sitelen-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for Sitelen Sitelen renderer"

[lib]
crate-type = ["cdylib", "rlib"]
name = "sitelen_wasm"
path = "src/lib.rs"

[dependencies]
sitelen-core = { path = "../sitelen-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[profile.release]
opt-level = "z"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

